# auto-causal-lib

./: .gitignore  DATASETS.md  MANIFEST.in  README.md  pyproject.toml
docs/: AGENTIC_LOOP.md  AUTOCHART.md  AUTOVIZ.md  AUTO_NLP.md  AUTO_TABULAR_ML.md  CAUSAL_BACKENDS.md  CAUSAL_INFERENCE.md  CLI.md  CONNECTIONS.md  CORRELATION.md  DEEP_RESEARCH.md  ESCALATION_POLICIES.md  EXAMPLES.md  GRAIL.md  GUIDES.md  INDEX.md  INSIGHT_SUITE.md  INTEGRATIONS.md  LAYER_CAUSAL_IV.md  LIBRARY_API.md  MCP.md  ML_KPI_LOOP.md  MODULES.md  NLP_AND_BEHAVIORAL_TRACES.md  PHYSICS_DEMO.md  PRODUCTION.md  PUBLIC_CAUSAL_MINING.md  PUBLIC_SUITE.md  REPORT_ENGINE.md  ROADMAP.md  SLM_SKILLING.md  SOTA.md  SOTA_PHYSICS_WORLD_MODEL_AUTOCAUSAL.md  SUITES.md  SUITE_TOOLS.md
examples/: iris_causal.py  multi_dataset_tour.py
examples/data/: iv_demo.csv
scripts/: generate_example_datasets.py
src/autocausal/: __init__.py  __main__.py  api.py  cli.py  connective.py  datamine_adapter.py  datasets.py  db.py  discovery.py  doctor.py  engines.py  grounding.py  help_catalog.py  impute.py  ingest.py  isolates_bridge.py  iv.py  join.py  mining.py  panel.py  production.py  public_causal.py  public_suite.py  py.typed  qc.py  report.py  results.py  roles.py  sensitivity.py  slm.py  statistical_gates.py  suite_tools.py
src/autocausal/agentic/: __init__.py  compact.py  graph_runtime.py  langgraph_chain.py  loop.py  memory.py  persist.py  report.py  state.py  vector_memory.py
src/autocausal/apps/: __init__.py  physics_streamlit.py  samples.py
src/autocausal/autochart/: __init__.py  renderer.py  report.py  specs.py
src/autocausal/automl/: __init__.py  candidates.py  preprocessing.py  report.py  splits.py  suite.py  task.py
src/autocausal/autonlp/: __init__.py  features.py  profile.py  report.py  roles.py  suite.py
src/autocausal/autoviz/: __init__.py  planner.py  report.py  suite.py
src/autocausal/backends/: __init__.py  _common.py  causal_learn.py  doubleml_backend.py  dowhy_refute.py  econml_backend.py  gcastle_backend.py  lingam_backend.py
src/autocausal/behavioral/: __init__.py  bridge.py  features.py  loaders.py  panel.py  report.py  schema.py  store.py
src/autocausal/contracts/: __init__.py  envelope.py  fabric.py
src/autocausal/correlation/: __init__.py  core.py
src/autocausal/data/: __init__.py
src/autocausal/data/behavioral/: __init__.py  habit_loop.csv  nudge_ab.csv  reinforcement_schedule.csv
src/autocausal/data/examples/: __init__.py  california_housing_sample.csv  gapminder_subset.csv
src/autocausal/data/physics/: affect_demo.csv  kpi_panel_demo.csv  markets_demo.csv  oscillator_demo.csv
src/autocausal/data/public/: .gitkeep  climate_demo.csv  demographics_demo.csv  finance_demo.csv  health_demo.csv  instruments_demo.csv  manifest.json  marketing_demo.csv  policy_demo.csv  vision_stub.csv
src/autocausal/grail/: __init__.py  adapter.py  guide.py  hooks.py  mcp_tools.py  stub.py  types.py
src/autocausal/guides/: __init__.py  huggingface.py  kineteq_guide.py  llmintent_guide.py  retracement_guide.py  rule.py  types.py
src/autocausal/inference/: __init__.py  core.py  native.py  types.py
src/autocausal/insight/: __init__.py  cli_hooks.py  experiments.py  narrator.py  report.py  suite.py
src/autocausal/integrations/: __init__.py  catalog.py  cli.py  manifest.py  profiles.py  registry.py  router.py  types.py
src/autocausal/integrations/adapters/: __init__.py  base.py  causal.py  data.py  ml.py  native.py  nlp.py  statistics.py  visualization.py
src/autocausal/mcp/: __init__.py  __main__.py  hooks.py  registry.py  serialize.py  server.py  session.py
src/autocausal/ml/: __init__.py  automl.py  construct.py  fit_report.py  imputers.py  loop.py  predictors.py  torch_models.py
src/autocausal/ml/schemas/: FitReport.json  ModelSpec.json
src/autocausal/nlp/: __init__.py  backend.py  builder.py  features.py  hints.py  keywords.py  sentiment.py  tokenize.py
src/autocausal/physics/: __init__.py  engine.py  grounding.py  suite.py  types.py
src/autocausal/reporting/: __init__.py  adapters.py  director.py  engine.py  models.py  renderers.py  sections.py  tools.py
src/autocausal/research/: __init__.py  adapters.py  evidence.py  handoff.py  mcp.py  models.py  planning.py  providers.py  slm.py  suite.py
src/autocausal/skilling/: __init__.py  broker.py  catalog.py  registry.py  surface.py  trace.py
src/autocausal/suites/: __init__.py  action_protocol.py  autocleanse.py  autoeda.py  automine.py  base.py  director.py
src/autocausal/suites/autocleanse/: __init__.py  actions.py  report.py  suite.py
src/autocausal/suites/autoeda/: __init__.py  actions.py  report.py  suite.py
src/autocausal/suites/automine/: __init__.py  actions.py  report.py  suite.py
tests/: test_advanced_auto_systems.py  test_agentic.py  test_api_ergonomics.py  test_behavioral.py  test_causal_backends.py  test_consolidation_014.py  test_correlation_portfolio.py  test_csv_discover.py  test_deep_research.py  test_doctor.py  test_example_datasets.py  test_grail.py  test_guide_ground.py  test_guides.py  test_help_catalog.py  test_inference_portfolio.py  test_insight.py  test_integrations.py  test_isolates_bridge.py  test_iv_auto_instrument.py  test_mcp_hooks.py  test_mining.py  test_ml_kpi_loop.py  test_nlp.py  test_p1_p3_features.py  test_physics.py  test_physics_demo.py  test_ping.py  test_production_release.py  test_production_safety.py  test_production_suites_advanced.py  test_public_causal.py  test_public_suite.py  test_qwen_slm_insight.py  test_report_and_engines.py  test_reporting_engine.py  test_slm_and_tools.py  test_slm_default_guide.py  test_smoke.py  test_sqlite.py  (+1 more)
