[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-causal-lib"
version = "0.11.4"
description = "Auto-impute, SLM-directed AutoCleanse/AutoEDA/AutoMine suites, agentic causal loop (compact+memory), Kineteq GRAIL soft loop, MCP/AgentHook connective tools, mine, discover, public multi-source causal mining, NLTK NLP hints, behavioral science traces, KPI ML loops (SLM→PyTorch), physics predictive loop + Streamlit demo, direction guides, SLM create/infer, tool suite, and ground exploratory causal relationships from CSV and SQL databases."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AutoCausalLib" }]
keywords = ["causal", "imputation", "discovery", "sqlalchemy", "tabular", "mining"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pyarrow>=14.0"]
datamine = []  # pip install -e ../DataMineLib — see autocausal.datamine_adapter
parquet = ["pyarrow>=14.0"]
postgres = ["psycopg2-binary>=2.9"]
vertica = ["vertica-python>=1.3"]
mysql = ["pymysql>=1.1"]
mariadb = ["pymysql>=1.1"]
mssql = ["pyodbc>=5.0"]
oracle = ["oracledb>=2.0"]
duckdb = ["duckdb>=0.10", "duckdb-engine>=0.13"]
snowflake = ["snowflake-sqlalchemy>=1.5"]
bigquery = ["sqlalchemy-bigquery>=1.11"]
redshift = ["sqlalchemy-redshift>=0.8", "psycopg2-binary>=2.9"]
cockroachdb = ["psycopg2-binary>=2.9"]
trino = ["trino>=0.328"]
presto = ["pyhive[presto]>=0.7"]
clickhouse = ["clickhouse-sqlalchemy>=0.3"]
databricks = ["databricks-sqlalchemy>=1.0"]
synapse = ["pyodbc>=5.0"]
firebird = ["sqlalchemy-firebird>=0.8"]
hana = ["sqlalchemy-hana>=0.5"]
sqlite = []
slm = ["torch>=2.0", "transformers>=4.36"]
torch = ["torch>=2.0"]
sklearn = ["scikit-learn>=1.3"]
ml = ["auto-causal-lib[torch,sklearn]"]
nlp = ["nltk>=3.8", "gensim>=4.3"]
nlp-full = ["auto-causal-lib[nlp]", "spacy>=3.7"]
causal-extra = [
  "dowhy>=0.11",
  "econml>=0.15",
  "causal-learn>=0.1.3.8",
  "DoubleML>=0.7",
  "lingam>=1.8",
  "gcastle>=1.0.3",
  "scikit-learn>=1.3",
]
web = ["httpx>=0.27"]
ui = ["streamlit>=1.28", "plotly>=5.18"]
streamlit = ["auto-causal-lib[ui]"]
suite = ["auto-causal-lib[nlp,slm,web,ml,ui]"]
mcp = ["mcp>=1.0"]
isolates = []  # pip install intentisolates — see autocausal.isolates_bridge
all-drivers = [
  "auto-causal-lib[postgres,vertica,mysql,mariadb,mssql,oracle,duckdb,snowflake,bigquery,redshift,cockroachdb,trino,presto,clickhouse,databricks,synapse,parquet]",
]
all = [
  "auto-causal-lib[nlp,slm,mcp,ui,ml,causal-extra,web,parquet,all-drivers]",
]

[project.scripts]
autocausal = "autocausal.cli:main"
autocausal-mcp = "autocausal.mcp.server:main"

[project.urls]
Homepage = "https://github.com/ehallford11714/auto-causal-lib"
PyPI = "https://pypi.org/project/auto-causal-lib/"
Documentation = "https://github.com/ehallford11714/auto-causal-lib/blob/master/docs/INDEX.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
autocausal = ["py.typed", "data/**/*", "data/public/**/*", "data/examples/**/*", "data/physics/**/*", "data/behavioral/**/*", "ml/schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.exclude-package-data]
autocausal = ["**/__pycache__/*", "**/*.pyc", "**/*.pyo"]
