[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-causal-lib"
version = "0.14.0"
description = "Production-oriented AutoCausal with unified inference runtime, typed association, AutoEDA/AutoCleanse/AutoTabularML, deep research, PDF reporting, and exploratory discovery. Synthetic IV is refused in production."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AutoCausalLib" }]
keywords = ["causal", "inference", "correlation", "imputation", "discovery", "automl", "tabular", "production-safety"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "sqlalchemy>=2.0",
  "scikit-learn>=1.3",
  "nltk>=3.8",
  "httpx>=0.27",
  "reportlab>=4.0",
  "pyarrow>=14.0",
  "torch>=2.0",
  "transformers>=4.36",
  "accelerate>=0.27",
  "huggingface_hub>=0.20",
  "langgraph>=0.2",
  "langchain-core>=0.2",
  "mcp>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "twine>=5.0", "build>=1.0"]
datamine = []
parquet = ["pyarrow>=14.0"]
postgres = ["psycopg2-binary>=2.9"]
vertica = ["vertica-python>=1.3"]
mysql = ["pymysql>=1.1"]
mariadb = ["pymysql>=1.1"]
mssql = ["pyodbc>=5.0"]
oracle = ["oracledb>=2.0"]
duckdb = ["duckdb>=0.10", "duckdb-engine>=0.13"]
snowflake = ["snowflake-sqlalchemy>=1.5"]
bigquery = ["sqlalchemy-bigquery>=1.11"]
redshift = ["sqlalchemy-redshift>=0.8", "psycopg2-binary>=2.9"]
cockroachdb = ["psycopg2-binary>=2.9"]
trino = ["trino>=0.328"]
presto = ["pyhive[presto]>=0.7"]
clickhouse = ["clickhouse-sqlalchemy>=0.3"]
databricks = ["databricks-sqlalchemy>=1.0"]
synapse = ["pyodbc>=5.0"]
firebird = ["sqlalchemy-firebird>=0.8"]
hana = ["sqlalchemy-hana>=0.5"]
sqlite = []
slm = ["torch>=2.0", "transformers>=4.36", "accelerate>=0.27", "huggingface_hub>=0.20"]
torch = ["torch>=2.0"]
bitsandbytes = ["bitsandbytes>=0.43"]
sklearn = ["scikit-learn>=1.3"]
ml = ["auto-causal-lib[torch,sklearn]"]
nlp = ["nltk>=3.8", "gensim>=4.3"]
stats = [
  "scipy",
  "statsmodels",
  "patsy",
  "linearmodels",
  "arch",
  "lifelines",
  "scikit-posthocs",
]
automl = [
  "scikit-learn>=1.3",
  "xgboost",
  "lightgbm",
  "catboost",
  "optuna",
  "imbalanced-learn",
  "shap",
]
nlp-full = [
  "nltk>=3.8",
  "spacy>=3.7",
  "sentence-transformers",
  "stanza",
  "textblob",
  "keybert",
  "faiss-cpu; platform_system != 'Windows'",
  "chromadb",
]
causal-extra = [
  "dowhy>=0.11",
  "econml>=0.15",
  "causal-learn>=0.1.3.8",
  "DoubleML>=0.7",
  "lingam>=1.8",
  "gcastle>=1.0.3",
  "pgmpy",
  "PySensemakr",
  "linearmodels",
  "scikit-learn>=1.3",
]
viz = [
  "matplotlib",
  "seaborn",
  "plotly>=5.18",
  "kaleido",
  "networkx",
  "graphviz",
]
production = [
  "auto-causal-lib[stats,viz]",
  "pandera",
  "polars",
  "pyarrow>=14.0",
  "imbalanced-learn",
  "mlflow",
]
research = [
  "auto-causal-lib[stats,automl,nlp-full,causal-extra,viz]",
  "pymc",
  "arviz",
  "great-expectations",
  "ydata-profiling",
]
all-safe = [
  "scipy",
  "statsmodels",
  "patsy",
  "linearmodels",
  "arch",
  "lifelines",
  "scikit-posthocs",
  "scikit-learn>=1.3",
  "optuna",
  "imbalanced-learn",
  "shap",
  "spacy>=3.7",
  "sentence-transformers",
  "textblob",
  "keybert",
  "causal-learn>=0.1.3.8",
  "dowhy>=0.11",
  "DoubleML>=0.7",
  "lingam>=1.8",
  "pgmpy",
  "pandera",
  "polars",
  "pyarrow>=14.0",
  "matplotlib",
  "seaborn",
  "plotly>=5.18",
  "kaleido",
  "networkx",
]
web = ["httpx>=0.27"]
ui = ["streamlit>=1.28", "plotly>=5.18"]
streamlit = ["auto-causal-lib[ui]"]
suite = ["auto-causal-lib[nlp,slm,web,ml,ui]"]
mcp = ["mcp>=1.0"]
isolates = []
all-drivers = [
  "auto-causal-lib[postgres,vertica,mysql,mariadb,mssql,oracle,duckdb,snowflake,bigquery,redshift,cockroachdb,trino,presto,clickhouse,databricks,synapse,parquet]",
]
all = [
  "auto-causal-lib[nlp,slm,mcp,ui,ml,causal-extra,web,parquet,all-drivers,bitsandbytes]",
]

[project.scripts]
autocausal = "autocausal.cli:main"
autocausal-mcp = "autocausal.mcp.server:main"

[project.urls]
Homepage = "https://github.com/ehallford11714/auto-causal-lib"
PyPI = "https://pypi.org/project/auto-causal-lib/"
Documentation = "https://github.com/ehallford11714/auto-causal-lib/blob/master/docs/INDEX.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
autocausal = ["py.typed", "data/**/*", "data/public/**/*", "data/examples/**/*", "data/physics/**/*", "data/behavioral/**/*", "ml/schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "slow: heavy model download / Qwen inference (set AUTOCAUSAL_TEST_QWEN=1)",
]

[tool.setuptools.exclude-package-data]
autocausal = ["**/__pycache__/*", "**/*.pyc", "**/*.pyo"]
